@@ -51,6 +51,8 @@ object JdkOptions extends AutoPlugin {
     if (isJdk17orHigher) {
       // for aeron
       "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED" ::
+      // for fork join pool
+      "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED" ::
       // for LevelDB
       "--add-opens=java.base/java.nio=ALL-UNNAMED" :: Nil
     } else Nil
